# tmg

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README  mkdocs.yml  pyproject.toml  pyrightconfig.json  remove-vocal-and-midi.sh  repo.sh  tox.ini
docs/: api.md  installation.md  usage.md
notebooks/: data-collect.py
notebooks/music_transformer/: 01_dataset.py  02_train.py  03_evaluation.py  04_generation.py  requirememts.txt
notebooks/music_transformer/chords/: LAKH_INTs_195.pickle
notebooks/music_transformer/seeds/: seed-biwang-1.mid  tibetan-1.mid  tibetan-2.mid
notebooks/simple_rnn/: 00_rnn_baseline.md
tests/: __init__.py  test_app.py
tmg/: __init__.py  cli.py  conf.py
tmg/crawl/: scrapy.cfg
tmg/crawl/music_crawl/: items.py  pipelines.py
tmg/crawl/music_crawl/spiders/: tibet3.py
tmg/music_crawl/: items.jsonl
tmg/music_crawl/music_crawl/: middlewares.py  settings.py
tmg/music_crawl/music_crawl/spiders/: tibet3.py
