[tool]
[tool.poetry]
name = "tmg"
version = "0.1.0"
homepage = "https://github.com/sangjeedondrub/tmg"
description = "Tibetan Music Generation Project."
authors = ["Sangjee Dondrub <sangjeedondrub@live.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "tmg" },
    { include = "tests", format = "sdist" },
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fire = "0.4.0"

black  = { version = "^22.3.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "4.0.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^7.0.1", optional = true}
pytest-cov  = { version = "^3.0.0", optional = true}
tox  = { version = "^3.24.5", optional = true}
virtualenv  = { version = "^20.13.1", optional = true}
pip  = { version = "^22.0.3", optional = true}
mkdocs  = { version = "^1.2.3", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.2.3", optional = true}
mkdocs-material  = { version = "^8.1.11", optional = true}
mkdocstrings  = { version = "^0.18.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.3", optional = true}
twine  = { version = "^3.8.0", optional = true}
mkdocs-autorefs = {version = "^0.3.1", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
toml = {version = "^0.10.2", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
mike = { version="^1.1.2", optional=true}
rootpath = "^0.1.1"
scrapy = "^2.9.0"
jupytext = "^1.14.7"
musiclm-pytorch = "^0.2.2"
xmltodict = "^0.13.0"
pdftotext = "^2.2.2"
pdfx = "^1.4.1"
datasets = "^2.13.1"
soundfile = "^0.12.1"
librosa = "^0.10.0.post2"
ipywidgets = "^8.0.7"
pretty-midi = "^0.2.10"
tensorboard = "^2.13.0"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mike"
    ]

[tool.poetry.scripts]
tmg = 'tmg.cli:main'

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.0.7"
jupyterlab-widgets = "^3.0.8"
tqdm = "^4.65.0"
jupytext = "^1.14.7"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
huggingface-hub = "^0.16.4"
torch = "^2.0.1"
einops = "^0.6.1"
torch-summary = "^1.4.5"
sklearn = "^0.0.post5"
midi2audio = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
